# chatterbox

./: pyproject.toml
examples/: test_package.ipynb
